# StablerCharacter

./: .gitignore  LICENSE  README.md  SCGE.h  StablerCharacter-cpp-vs.cpp  StablerCharacter-cpp-vs.sln  StablerCharacter-cpp-vs.vcxproj  StablerCharacter-cpp-vs.vcxproj.filters  packages.config  run_example.py  setup.cfg  test.cpp  test.h  window.cpp  window.h
Debug/: StablerCharacter-cpp-vs.exe.recipe  StablerCharacter-cpp-vs.ilk  StablerCharacter-cpp-vs.vcxproj.FileListAbsolute.txt  vc142.idb
Debug/StablerC.6f82aa75.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  StablerCharacter-cpp-vs.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SCGE/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters  SandboxApp.cpp
examples/basic_example/: __init__.py
examples/story_building/: __init__.py  story.py
pyarcade/: DefaultMainMenu.py  Enums.py  SCArcade-Demo.py  StablerCharacterArcade.py  sconfig.json
scfw2d/: DefaultMainMenu.py  Enums.py  MarkdownParser.py  StablerCharacterArcade.py  StoryManager.py  __init__.py  scriptbuilder.py  storybuilder.py
src/scfw2d/: SCArcade-Demo.py  __init__.py  storyeditor.py
src/scfw2d.egg-info/: PKG-INFO  SOURCES.txt  StablerCharacterArcade.py
storyeditor/: storyeditor.py
