[metadata]
name = scfw2d
version = 0.0.2
author = lines-of-codes
author_email = admin@susite.ga
description = A tools use for creating Advanced text-based game.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lines-of-codes/StablerCharacter
project_urls = 
	Bug Reports = https://github.com/lines-of-codes/StablerCharacter/issues
classifiers = 
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: Implementation :: CPython
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages  = find:
python_requires = >=3.6

[option.packages.find]
where = src
